--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title> Food Delivery Jobs | In Edmonton</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <h1>Title</h1>
+    <h1>Food Delivery Jobs</h1>
   </header>
   <nav>
     <ul>
