--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title> Food Delivery Jobs | In Edmonton</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="djBBjxnf_Fwm8X-HDO2EGE5ICUqChKSRv3yGLsZzoXE" />
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
