--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html class="no-js" lang="">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E7P239TQ26"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E7P239TQ26');
+</script>
   <meta charset="utf-8">
   <title> Food Delivery Jobs | In Edmonton</title>
   <meta name="description" content="">
