--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta name="google-site-verification" content="djBBjxnf_Fwm8X-HDO2EGE5ICUqChKSRv3yGLsZzoXE" />
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <!-- <link rel="apple-touch-icon" href="icon.png"> -->
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -49,39 +49,56 @@
         <li>  Have a fully functional vehicle </li>
         <li>Proof of a valid driver’s license </li>
         <li> Valid vehicle insurance & registration </li>
-        <li>Background check, paid for by skip</li>
+        <li>Background check required</li>
         <li>Approved Thermal Bags [$59.95 required] </li>
         <li>Good phone and data plan</li>
+        <li>Documentation stating that you are legally allowed to work (Passport, Work Permit)</li>
       </ul>
+
+      <h4>Earnings</h4>
+
+      <p>As a Skip Courier, individuals earn money with delivery fees and customer tips. You should also consider the number of deliveries you make,  the distance you drive during a shift. When it comes to cash orders, you will receive payments immediately.Online order payments will be deposited in your account weekly. Hours are flexible, depending on your availability, but must be scheduled in the app.
+      </p>
+
+      <p>Skip orders consist of prepared fast food and restaurant orders.</p>
       
       <h3>DoorDash</h3>
 
-
       <ul>
-        <li></li>
+        <li>An individual must have access to a smartphone (iPhone or Android)</li>
+        <li>Proof of valid license and insurance</li>
+        <li> Must be 18 or over </li>
+        <li>Required to have 1 or more years of driving experience</li>
+        <li>Verification of identity (SIN, fill out a W9 form) </li>
+        <li>Background check required</li>
       </ul>
+
+      <h4>Earnings</h4>
+
+      <p></p>
+
       <h3>UberEats</h3>
 
 
       <ul>
-        <li>  Have a fully functional vehicle </li>
-        <li>Proof of a valid driver’s license </li>
-        <li> Valid vehicle insurance & registration </li>
-        <li>Background check, paid for by skip</li>
-        <li>Approved Thermal Bags [$59.95 required] </li>
-        <li>Good phone and data plan</li>
+        <li>  </li>
+        <li></li>
+        <li>  </li>
+        <li></li>
+        <li> </li>
+        <li></li>
       </ul>
 
       <h3>InstaCart</h3>
 
 
       <ul>
-        <li>  Have a fully functional vehicle </li>
-        <li>Proof of a valid driver’s license </li>
-        <li> Valid vehicle insurance & registration </li>
-        <li>Background check, paid for by skip</li>
-        <li>Approved Thermal Bags [$59.95 required] </li>
-        <li>Good phone and data plan</li>
+        <li>   </li>
+        <li> </li>
+        <li>  </li>
+        <li></li>
+        <li> </li>
+        <li></li>
       </ul>
      
     </article>
