--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     </article>
   </main>
   <footer>
-    <p>Created by Insert your Name</p>
+    <p>Created by Rachelle Diaze</p>
   </footer>
 </body>
 </html>
