--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <p>DoorDash is available for restaurant orders</p>
 
 
-      <h3> >Food Delivery Opportunity #3: UberEats</h3>
+      <h3>Food Delivery Opportunity #3: UberEats</h3>
 
       <p>UberEats is a unique food delivery job because it allows different forms of transportation, depending on which city you are located in.  UberEats does not only offer fast food and restaurant orders, it also has grocery delivery.</p>
 
@@ -136,7 +136,7 @@
       The Uber Fee or Commission is deducted from your fare. This may vary from 5-35%. 
       </p>
     
-    <h3>>Food Delivery Opportunity #4: InstaCart</h3>
+    <h3>Food Delivery Opportunity #4: InstaCart</h3>
 
     <p>If you are considering joining InstaCart, keep in mind you will have to shop for the specific items (orders) yourself. These orders can be groceries or retail items.</p>
 
