--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       
       <p>What are the requirements before starting? How much do people get paid? How are hours setup?</p>
 
-      <h3> Food Delivery Opportunity #1: SkipTheDishes</h3>
+      <h3> Food Delivery Jobs - Opportunity #1: SkipTheDishes</h3>
       <ul>
         <li>  Have a fully functional vehicle </li>
         <li>Proof of a valid driver’s license </li>
@@ -68,7 +68,7 @@
 
       <p>Skip orders consist of prepared fast food and restaurant orders.</p>
       
-      <h3>Food Delivery Opportunity #2: DoorDash</h3>
+      <h3>Food Delivery Jobs - Opportunity #2: DoorDash</h3>
 
       <ul>
         <li>An individual must have access to a smartphone (iPhone or Android)</li>
@@ -94,7 +94,7 @@
       <p>DoorDash is available for restaurant orders</p>
 
 
-      <h3>Food Delivery Opportunity #3: UberEats</h3>
+      <h3>Food Delivery Jobs - Opportunity #3: UberEats</h3>
 
       <p>UberEats is a unique food delivery job because it allows different forms of transportation, depending on which city you are located in.  UberEats does not only offer fast food and restaurant orders, it also has grocery delivery.</p>
 
